# aml_wa24

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
notebooks/: vorbereitung.ipynb
notebooks/tag1/: basic_text_classification.ipynb  text_classification.ipynb  titanic.ipynb  torch_training.ipynb
notebooks/tag2/: question_answering.ipynb  text_classification_trainer.ipynb  transformers_basics.ipynb
notebooks/tag3/: bertopic.ipynb  csv_search.ipynb  search.ipynb  setfit.ipynb
notebooks/tag4/: ideas.txt
